[project]
name = "songlink-cli"
version = "0.1.0"
description = "Console tool to get Odesli/Songlink smart page URL by artist & album."
authors = [{name = "qmka"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "pyperclip>=1.9.0", # для --copy (буфер обмена); можно убрать, если не нужно
    "pyfiglet>=1.0.4",
    "colorama>=0.4.6",
]

[project.scripts]
songlink = "songlink_cli:main"

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "PERF"]
ignore = ["E203", "E501"]
